--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to understand more </p>
 
     <p>Linda looks <strong>very</strong> nice</p>
-    <img src="Images/linda-evangelista-versace-1994-z.jpg.webp" alt="Linda Evangelista" />
+    <img src="Images/Laetitia.jpg" alt="Laetitia Casta" />
     <P>This is another example of text under photo</P>
     <button>Change user</button>
     <script src="scripts/main.js"></script>
