--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <body>
     <!-- 4 heading levels: -->
 <h1>myHeading is ignored</h1>
-<h1>This is Linda</h1>
 <h2>My top level heading</h2>
 <h3>My subheading</h3>
 <h4>My sub-subheading</h4>
@@ -26,8 +25,8 @@
 <p>working together…</p>
 <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to understand more </p>
 
-    <p>Linda looks <strong>very</strong> nice</p>
-    <img src="Images/Laetitia.jpg" alt="Laetitia Casta" />
+    <p>This girl looks <strong>very</strong> nice</p>
+    <img src="images/laetitia.jpg" alt="Laetitia Casta" />
     <P>This is another example of text under photo</P>
     <button>Change user</button>
     <script src="scripts/main.js"></script>
